<?xml version="1.0"?>
<package format="2">
  <name>multi_planner_launcher</name>
  <version>1.0.0</version>
  <description>The multi_planner_launcher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tellisstephen@gmail.com">Stephen Tellis</maintainer>

  <license>MIT</license>

  <depend>pilz_industrial_motion</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
